k8s/httpbin/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: httpbin
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - argo-cd/istio-ingressgateway
  http:
  - match:
    - uri:
        prefix: /headers
    - uri:
        prefix: /uuid
    route:
    - destination:
        port:
          number: 8000
        host: httpbin
